# LeanDream

./: .gitignore  README.md
LeanDream-main/: .env.example  README.md
LeanDream-main/lean/: lake-manifest.json
LeanDream-main/python/: pyproject.toml
LeanDream-main/python/leandream/: bootstrap.py  doctor.py  hierarchy.py  installer.py  llm.py  mock_llm.py  orchestrator.py  prompts.py  proof_router.py  properties.py  repair.py  translate.py  truthtable.py  verify.py
LeanDream-main/python/leandream/learning/: contextual_bandit.py
LeanDream-main/python/leandream/memory/: card_store.py  cards.py  retriever.py  theorem_exporter.py
LeanDream-main/python/leandream/web_static/: app.js  index.html
LeanDream-main/specs/: and2.json  half_adder_carry.json  half_adder_sum.json  or2.json
data/bandit/: bandit.json
lean/: LeanDream.lean  lakefile.toml
python/: pyproject.toml
python/leandream/: __init__.py  analysis.py  ast.py  attempts.py  audit.py  cache.py  curriculum.py  failure_modes.py  forest.py  hole_detector.py  installer.py  llm.py  metrics.py  miner.py  orchestrator.py  preflight.py  promptlog.py  prompts.py  properties.py  quickcheck.py  repair.py  reports.py  spec_formulas.py  specs_gen.py  theorem_gen.py  verify.py  web.py
python/leandream/learning/: __init__.py  contextual_bandit.py
python/leandream/memory/: __init__.py  cards.py  indexer.py  prompt_pack.py  theorem_exporter.py
python/leandream/web_static/: app.js  index.html  style.css
python/tests/: test_miner.py  test_semantic_roles.py  test_speed_hardening.py  test_translate.py  test_v4.py
specs/: and3.json  full_adder_carry.json  full_adder_sum.json  gt4.json  lt4.json  majority3.json  majority4.json  majority5.json  majority7.json  min2_of4.json  mux2.json  nand2.json  nand4.json  nor4.json  one_hot4.json  or3.json  palindrome6.json  parity3.json  parity4.json  parity6.json  parity8.json  rotate_eq6.json  xnor2.json  xor2.json  xor_chain4.json
(+57 files in other folders)
